# Sequel-Ace

./: .coderabbit.yaml  .gitignore  .swiftlint.yml  AGENTS.md  ANALYSIS_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LICENSE  PROJECT_INDEX.json  PROJECT_INDEX.md  Podfile  SECURITY.md  SPPostgresConnection 2.m  SPPostgresGeometryData 2.m  SPPostgresStreamingResult.m  SPPostgresStreamingResultStore 2.m  Sequel Ace.entitlements  agents.md  app_logs.txt  build.sh  crowdin.yml  developing.md  readme.md
.bundle/: config
.claude/: modernization-followup-plan.md
.github/: FUNDING.yml  issue_template.md  pull_request_template.md  stale.yml
Artwork/: Ace Background.afdesign  Icon 2.afdesign
Entitlements/: Sequel Ace.entitlements  Sequel PAce.entitlements
Frameworks/SPPostgreSQLFramework/rust_src/: Cargo.toml
Frameworks/SPPostgreSQLFramework/rust_src/src/: connection.rs  errors.rs  lib.rs  result.rs  streaming_result.rs
GitHubActions/: build.sh
Guides/: AppStore_description.md  Code_of_conduct.md  Contributing.md  Developing.md
Interfaces/: AboutPanel.xib  ConnectionErrorDialog.xib  ConnectionView.xib  Console.xib  DBView.xib  DatabaseProcessList.xib  ExportDialog.xib  FilterTableWindow.xib  IndexesView.xib  MainMenu.xib  MainWindow.xib  Navigator.xib  Preferences.xib  QueryFavoriteManager.xib  SaveSPFAccessory.xib
Resources/: Credits.md  Credits.rtf  GoogleService-Info.plist  License.md  License.rtf  Pods-Sequel Ace-acknowledgements.markdown  local-connection.html  ssh_config
Scripts/: Swift_5_Runtime_Support_for_Command_Line_Tools.dmg  build.sh  (+5 more)
(+1176 files in other folders)
